			CHANGELOG for KAME kit
$KAME: CHANGELOG,v 1.2743 2005/04/05 05:23:01 suz Exp $

<200504>
2005-04-05  SUZUKI, Shinsuke <suz@kame.net>
	* freebsd5/sys/ufs/ffs/ffs_inode.c: FreeBSD Security Advisory
	 FreeBSD-SA-05:02.sendfile

2005-04-04  SUZUKI, Shinsuke <suz@kame.net>
	* kame/sys/netinet6/nd6.c: when the number of the packets queued in
	  a NDP cache exceed the limit, discard the oldest packet, 
	  as specified in RFC2461 7.2.2.

2005-04-01  SUZUKI, Shinsuke <suz@kame.net>
	* kame/sys/netinet/icmp6.h, kame/sys/netinet6/icmp6.c, nd6.c: limits 
	the number of unresolved packets stored in a NDP cache.
	(To prevent a DoS attack using 2005-01-21's change)

2005-04-01  SUZUKI, Shinsuke <suz@kame.net>
	* kame/kame/rtadvd/configc, rtadvd.[ch]: reflect router-variables
	in RA configuration into host-variables in kernel.

<200503>
2005-03-30  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/dhcp6/addrconf.c (update_address): make sure that
	the lifetimes of addresses are updated when the client receives a
	Reply in response to Renew or Rebind.

2005-03-23  SUZUKI, Shinsuke <suz@kame.net>
	* kame/sys/net/if_ist.c: added a sanity check for the IPv4 address 
	  embedded in the configured IPv6 address

2005-03-18  SUZUKI, Shinsuke <suz@kame.net>
	* kame/sys/netinet6/in6.c, in6_var.h, in6_proto.c, ip6_input.c,
	  ip6_mroute.c: added a knob to enable path MTU discovery for 
	  multicast packets. (by default, it is disabled)

2005-03-14  SUZUKI, Shinsuke <suz@kame.net>
	* kame/sys/netinet6/ip6_output.c: fixed a kernel crash due to a LOR
	by a multicast-group join without specifying any receiving interface.

2005-03-14  SUZUKI, Shinsuke <suz@kame.net>
	* kame/sys/netinet6/in6.c, in6_var.h, nd6.c: introduced an ioctl option
	 to configure IPv6 host variables from userland.   (intented for a use 
	 on router to reflect RA parameter to kernel)
	* kame/kame/ndp/ndp.c: added a knob to kick this ioctl.
	
2005-03-08  SUZUKI, Shinsuke <suz@kame.net>